configure for cypress boards

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -89,8 +89,6 @@
             "update-client.storage-size"               : "((MBED_ROM_START + MBED_ROM_SIZE - MBED_CONF_MBED_BOOTLOADER_APPLICATION_START_ADDRESS) * MBED_CONF_UPDATE_CLIENT_STORAGE_LOCATIONS)",
             "update-client.storage-locations"          : 1,
             "update-client.firmware-header-version"    : "2",
-            "target.components_add"                    : ["SD"],
-            "sd.CRC_ENABLED"                           : 0,
             "storage.storage_type"                     : "FILESYSTEM",
             "storage_filesystem.internal_base_address" : "(MBED_ROM_START + MBED_BOOTLOADER_SIZE)",
             "update-client.application-details"        : "(MBED_CONF_STORAGE_FILESYSTEM_INTERNAL_BASE_ADDRESS + MBED_CONF_STORAGE_FILESYSTEM_RBP_INTERNAL_SIZE)",
@@ -128,6 +126,8 @@
                                                              ]
         },
         "CY8CKIT_062_BLE": {
+            "target.components_add"                        : ["SD"],
+            "sd.CRC_ENABLED"                           : 0,
             "sd.SPI_MOSI"                                  : "P12_0",
             "sd.SPI_MISO"                                  : "P12_1",
             "sd.SPI_CLK"                                   : "P12_2",
@@ -163,7 +163,36 @@
                                                               "I2C"
                                                              ]
         },
+        "CY8CPROTO_062_4343W": {
+            "target.features_remove"                       : [ "BLE" ],
+            "storage_filesystem.internal_base_address"     : "0x1000D000",
+            "storage_filesystem.rbp_internal_size"         : "(2*4*1024)",
+            "update-client.application-details"            : "0x1000F000",
+            "mbed-bootloader.default-max-application-size" : "(MBED_ROM_START + MBED_ROM_SIZE - MBED_CONF_MBED_BOOTLOADER_APPLICATION_START_ADDRESS - MBED_CONF_STORAGE_FILESYSTEM_RBP_INTERNAL_SIZE)",
+            "mbed-bootloader.bootloader-size"              : "(44*1024)",
+            "platform.stdio-baud-rate"                     : 115200,
+            "target.hex_filename"                          : null,
+            "target.device_has_remove"                     : [
+                                                              "SERIAL_ASYNCH",
+                                                              "SERIAL_FC",
+                                                              "PORTOUT",
+                                                              "PORTINOUT",
+                                                              "RTC",
+                                                              "I2C_ASYNCH",
+                                                              "SPI_ASYNCH",
+                                                              "STDIO_MESSAGES",
+                                                              "LPTICKER",
+                                                              "TRNG",
+                                                              "CRC",
+                                                              "PORTIN",
+                                                              "PWMOUT",
+                                                              "ANALOGIN",
+                                                              "ANALOGOUT",
+                                                              "I2C"
+                                                             ]
+        },		
         "CY8CKIT_062_WIFI_BT_PSA": {
+            "target.components_add"                        : ["SD"],
             "sd.SPI_MOSI"                                  : "P12_0",
             "sd.SPI_MISO"                                  : "P12_1",
             "sd.SPI_CLK"                                   : "P12_2",
@@ -197,12 +226,16 @@
                                                              ]
         },
         "K64F": {
+            "target.components_add"                    : ["SD"],
+            "sd.CRC_ENABLED"                           : 0,			
             "storage_filesystem.rbp_internal_size"     : "(2*4*1024)"
         },
         "K66F": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*4*1024)"
         },
         "KW24D": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*2*1024)",
             "sd.SPI_CS"                                : "PTC4",
             "sd.SPI_MOSI"                              : "PTC6",
@@ -210,18 +243,23 @@
             "sd.SPI_CLK"                               : "PTC5"
         },
         "NUCLEO_L476RG": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*2*1024)",
             "mbed-bootloader.application-start-address": "(MBED_ROM_START+38*1024)"
         },
         "DISCO_L476VG": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*2*1024)",
             "mbed-bootloader.application-start-address": "(MBED_ROM_START+38*1024)"
         },
         "DISCO_L475VG_IOT01A": {
+            "target.components_add"                    : ["SD"],
+            "sd.CRC_ENABLED"                           : 0,			
             "storage_filesystem.rbp_internal_size"     : "(2*2*1024)",
             "mbed-bootloader.application-start-address": "(MBED_ROM_START+38*1024)"
         },
         "NUCLEO_F411RE": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*16*1024)",
             "sd.SPI_CS"                                : "PB_9",
             "sd.SPI_MOSI"                              : "PC_3",
@@ -229,9 +267,11 @@
             "sd.SPI_CLK"                               : "PC_7"
         },
         "NUCLEO_F429ZI": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*16*1024)"
         },
         "NUCLEO_F207ZG": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*16*1024)",
             "sd.SPI_MOSI"                              : "PC_12",
             "sd.SPI_MISO"                              : "PC_11",
@@ -239,13 +279,17 @@
             "sd.SPI_CS"                                : "PA_15"
         },
         "UBLOX_EVK_ODIN_W2": {
+            "target.components_add"                    : ["SD"],		
             "target.device_has_remove": ["EMAC"],
             "storage_filesystem.rbp_internal_size"     : "(2*16*1024)"
         },
         "UBLOX_C030_U201": {
+            "target.components_add"                    : ["SD"],		
             "storage_filesystem.rbp_internal_size"     : "(2*16*1024)"
         },
         "NRF52840_DK": {
+            "target.components_add"                    : ["SD"],
+            "sd.CRC_ENABLED"                           : 0,			
             "storage_filesystem.internal_base_address" : "(1016*1024)",
             "storage_filesystem.rbp_internal_size"     : "(2*4*1024)",
             "update-client.application-details"        : "(236*1024)",
