working version, uses tdb storage, not optimized

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -95,16 +95,16 @@
             "target.sectors"                               : [[268435456, 512]],
             "target.components_remove"                     : [ "SPM_MAILBOX", "SD", "RTX", "SOFTFP" ],
             "target.features_remove"                       : [ "BLE" ],			
-            "mbed-bootloader.bootloader-size"              : "0x00020000",
-			"target.restrict_size"                         : "0x00020000",
-            "update-client.application-details"            : "0x10020000",
-            "mbed-bootloader.application-start-address"    : "0x10020400",
+            "mbed-bootloader.bootloader-size"              : "0x0000C000",
+			"target.restrict_size"                         : "0x0000C000",
+            "update-client.application-details"            : "0x1000C000",
+            "mbed-bootloader.application-start-address"    : "0x1000C400",
             "storage.storage_type"                         : "TDB_INTERNAL",
-            "storage_tdb_internal.internal_base_address"   : "0x10100000",
-            "storage_tdb_internal.internal_size"           : "0x00040000",
-            "update-client.storage-address"                : "0x00140000",
-            "mbed-bootloader.max-application-size"         : "0x000E0C00",
-            "update-client.storage-size"                   : "0x000E1000", 
+            "storage_tdb_internal.internal_base_address"   : "0x100F0000",
+            "storage_tdb_internal.internal_size"           : "0x00020000",
+            "update-client.storage-address"                : "0x00110000",
+            "mbed-bootloader.max-application-size"         : "0x000F0000",
+            "update-client.storage-size"                   : "0x000F0000", 
             "platform.stdio-baud-rate"                     : 115200,
             "target.extra_labels_remove"                   : [ "WICED", "CORDIO", "PSA", "MBED_SPM", "WHD", "4343W", "CYW43XXX" ],
             "target.device_has_remove"                     : [
